tests/miz/fail/types/fail_type_elaboration_imported_predicate_functor_gap_001.miz
import parser.type_fixtures;

theorem ImportedPredicateFunctorPayloadBoundary: 1 divides (1 ++ 2);
